--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./dist/uPlot.cjs.js",
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,15 @@
   },
   "homepage": "https://github.com/leeoniya/uPlot#readme",
   "devDependencies": {
+    "@babel/core": "^7.7.0",
+    "@storybook/addon-actions": "^5.2.5",
+    "@storybook/addon-links": "^5.2.5",
+    "@storybook/addons": "^5.2.5",
+    "@storybook/react": "^5.2.5",
+    "babel-loader": "^8.0.6",
     "rollup": "^1.26.3",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-terser": "^5.1.2"
-  }
+  },
+  "dependencies": {}
 }
