--- a/package.json
+++ b/package.json
@@ -37,5 +37,7 @@
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-terser": "^5.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "reselect": "^4.0.0"
+  }
 }
